# leptos-custom-elements-double-click

./: README.md  index.html
first/: Cargo.toml
first/src/: lib.rs
second/: Cargo.toml
second/src/: lib.rs
