[package]
name = "first"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom-elements = "0.2.1"
leptos = { version = "0.6.11", features = ["csr"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "Text"
]
